--- a/Electro.WebApplication/Electro.WebApplication.csproj
+++ b/Electro.WebApplication/Electro.WebApplication.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Area\Client\Views\" />
     <Folder Include="Components\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Shared\Components\" />
   </ItemGroup>
 
   <ItemGroup>
