Реализована функция авторизации пользователя.

--- a/Electro.Model/Electro.Model.csproj
+++ b/Electro.Model/Electro.Model.csproj
@@ -1,18 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">  
-    
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-  
-  <PropertyGroup>
-    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Client\Controllers\" />
-    <Folder Include="Areas\Client\Views\" />
-    <Folder Include="wwwroot\upload\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.16" />
@@ -26,14 +16,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.3.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Electro.Model\Electro.Model.csproj" />
+    <Folder Include="Database\Entities\" />
   </ItemGroup>
 
 </Project>
