--- a/Electro.WebApplication/appsettings.json
+++ b/Electro.WebApplication/appsettings.json
@@ -1,10 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+  "DbConfig": {
+    "ConnectionString": "Data Source=DESKTOP-9CDGA5B;Initial Catalog=Electro;User ID=sa;Password=sa;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
