Изменена схема БД. Удалены некоторые сущности. Реализованы CRUD операции со сущностью "Product". Функционал требует доработки из-за багов.

--- a/Electro.Model/Electro.Model.csproj
+++ b/Electro.Model/Electro.Model.csproj
@@ -9,6 +9,12 @@
     <Compile Remove="Database\Migrations\20210625125506_InitDatabase.Designer.cs" />
     <Compile Remove="Database\Migrations\20210627035921_ChangeDeleteRuleForRelationCategoryAndCategory.cs" />
     <Compile Remove="Database\Migrations\20210627035921_ChangeDeleteRuleForRelationCategoryAndCategory.Designer.cs" />
+    <Compile Remove="Database\Migrations\20210708123157_DeletingSomeEntities.cs" />
+    <Compile Remove="Database\Migrations\20210708123157_DeletingSomeEntities.Designer.cs" />
+    <Compile Remove="Database\Migrations\20210708123433_InitDatabase.cs" />
+    <Compile Remove="Database\Migrations\20210708123433_InitDatabase.Designer.cs" />
+    <Compile Remove="Database\Migrations\20210708123940_InitDatabase.cs" />
+    <Compile Remove="Database\Migrations\20210708123940_InitDatabase.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
